# prometheus-pve-http-sd

./: .mypy.ini  Dockerfile  README.md  pyproject.toml
pphsd/: cli.py  client.py  config.py  discovery.py  exceptions.py  metrics.py  model.py  pve_model.py
